# IFJ-LexerGenerator

./: LICENSE  README.md  config.py  input.dka  main.py  test_DKA.dka
template/: CMakeLists.txt  README.md  main.c
template/parts/lexer/: lexer.c  lexer.h  token.h
template/utils/: options.h
template/utils/token_array/: token_array.c  token_array.h
